--- a/css/index.css
+++ b/css/index.css
@@ -36,8 +36,8 @@ body {
     border: none;
     border-radius: 5px;
     padding: 8px 15px;
-    margin: 5px 0;
-    width: 80%;
+    margin: 5px 10px;
+    width: calc(100% - 20px);
     transition: background-color 0.3s ease;
     font-family: var(--body-font);
     font-size: var(--font-size);
@@ -117,6 +117,8 @@ textarea {
     background-color: var(--secondary-color);
     color: white !important;
     border: none;
+    position:absolute;
+    bottom: 10px;
 }
 
 .btn-outline-danger:hover {
